# prefetch-aware-loading

./: .gitignore  .gitmodules  README.md  requirements.txt
compute-node/: consumer.py  producer-dummy.py
compute-node/training/: consumer.py  producer-dummy.py
data-node/: CMakeLists.txt  requirements.txt
data-node/include/utils/: append_log.h  buffer_pool.h  concurrent_queue.h  debug.h  functions.h  network.h  pause.h  rdma.h  ring_buffer.h  socket.h  types.h
data-node/include/utils/parameters/: configuration.h  constants.h  derived.h
data-node/src/: CMakeLists.txt
data-node/src/client/: CMakeLists.txt  agent.cpp  agent.h  client.cpp  client_ffi.cpp  client_ffi.h
data-node/src/pipelines/: CMakeLists.txt
data-node/src/pipelines/DOCA/: config.h  doca.cpp  doca.h
data-node/src/pipelines/DOCA/DMA/: dma.cpp  dma.h  remote.cpp  remote.h
data-node/src/pipelines/DOCA/EC/: ec.cpp  ec.h
data-node/src/pipelines/RDMA/: config.h  device.cpp  device.h  queue_pair.cpp  queue_pair.h  request.h  ring_buffer_remote.h  types.h
data-node/src/pipelines/SPDK/: spdk.cpp  spdk.h
data-node/src/server/: CMakeLists.txt  main.cpp  server.cpp
data-node/src/server/backend/: CMakeLists.txt  IBackend.h  backend.h
data-node/src/server/backend/DPU/: CMakeLists.txt
data-node/src/server/backend/DPU/DMA/: host.cpp  memory.cpp  memory.h
data-node/src/server/backend/SPDK/: spdk.cpp  spdk.h
data-node/src/server/backend/host/: memory.cpp  memory.h
data-node/src/server/frontend/: CMakeLists.txt  completion.h  job.cpp  job.h  listener.cpp  listener.h  tracker.cpp  tracker.h
data-node/src/server/frontend/RDMA/: worker.cpp  worker.h
